Fix Safari bug that collapsed navlinks within navbar
WIP
Navlinks work as expected on smaller devices
Navbar itself is missing white bg below 1180px

--- a/_sass/_landing-page.sass
+++ b/_sass/_landing-page.sass
@@ -15,6 +15,8 @@
     border: none
 
 #sinatra-joke
+  +media(max-width 1180px)
+    display: none
   display: flex
   justify-content: center
   align-items: center
